# Chatbot

./: .gitignore
ChatbotEngine/: api.py  chat_pipline.py  main.py  pyproject.toml  requirements.txt
ChatbotEngine/notebook/: chatbot-experiment.ipynb
